tests/semantic/fail/array_index_string.c
int arr[2];
int x = arr["0"]; // E003: índice de array não numérico
